--- a/resources/assets/sass/app2.scss
+++ b/resources/assets/sass/app2.scss
@@ -39,6 +39,14 @@ html
 {
   background-color: $mainBackgroundColor;
 }
+  h1
+  {
+    color: $h1Color;
+  }
+  h2
+  {
+    color: $h2Color;
+  }
 
 p.verify
 {
