--- a/resources/assets/sass/nav/cardNav.scss
+++ b/resources/assets/sass/nav/cardNav.scss
@@ -3,6 +3,7 @@
   background-color: #FFFFFF;
   border-radius: 7px;
   border: 1px solid #BDC3C7;
+  box-shadow: 0 1px 4px #BDC3C7;
   margin: 0 auto 15px auto;
   width: 99.7%;
   height: auto;
@@ -13,6 +14,7 @@
   background-color: #FFFFFF;
   border-radius: 7px;
   border: 1px solid #27AE60;
+  box-shadow: 0 1px 4px #BDC3C7;
   margin: 0 auto 15px auto;
   width: 100%;
 }
