--- a/resources/assets/sass/utility/flatThemeVars.scss
+++ b/resources/assets/sass/utility/flatThemeVars.scss
@@ -40,7 +40,7 @@ $topNavBackgroundColor: #27AE60;
 $topNavColor: #ECF0F1;
 $topNavHoverBackground: #ECF0F1;
 $topNavHoverColor: #27AE60;
-$topNavDivBackground: #BDC3C7;
+$topNavDivBackground: #ECF0F1;
 $topNavDivColor: #2C3E50;
 $topNavDivHoverColor: #ECF0F1;
 $topNavDivHoverBackground: #27AE60;
@@ -69,3 +69,4 @@ $sideMargin: 0;
 
 //Headers
 $h1Color: #2C3E50;
+$h2Color: #2C3E50;
