--- a/public/css/app.css
+++ b/public/css/app.css
@@ -129,7 +129,7 @@
   background-color: #ECF0F1; }
 
 .topNav > ul > li > div {
-  background-color: #BDC3C7;
+  background-color: #ECF0F1;
   display: none;
   margin: 0;
   opacity: 0;
@@ -214,12 +214,17 @@
 .topNav > ul > li > div ul.navSettings {
   position: absolute;
   left: -65px;
-  background-color: #BDC3C7;
+  background-color: #ECF0F1;
   border-radius: 4px;
   color: #ECF0F1; }
 
 .topNav > ul > li > div ul > li {
   display: block; }
+
+.topNav > ul > li > div > ul {
+  box-shadow: 0 1px 2px 1px #27AE60;
+  font-weight: 500;
+  border-radius: 4px; }
 
 .profileNav ul {
   margin: 0;
@@ -636,6 +641,7 @@ p.test {
   background-color: #FFFFFF;
   border-radius: 7px;
   border: 1px solid #BDC3C7;
+  box-shadow: 0 1px 4px #BDC3C7;
   margin: 0 auto 15px auto;
   width: 99.7%;
   height: auto; }
@@ -644,6 +650,7 @@ p.test {
   background-color: #FFFFFF;
   border-radius: 7px;
   border: 1px solid #27AE60;
+  box-shadow: 0 1px 4px #BDC3C7;
   margin: 0 auto 15px auto;
   width: 100%; }
 
@@ -1148,6 +1155,9 @@ html {
   width: 100%; }
 
 h1 {
+  color: #2C3E50; }
+
+h2 {
   color: #2C3E50; }
 
 p.verify {
@@ -1724,7 +1734,8 @@ article {
   .topNav > ul > .searchIconBackground {
     display: none; }
   .topNav > ul > .searchMobileIconBackground {
-    display: inline-block; }
+    display: inline-block;
+    padding-left: 10px; }
   .topNav > ul > .navDesktopIcon {
     display: none; }
   .topNav > ul > .navMobileIcon {
@@ -1790,9 +1801,9 @@ article {
     width: 90%; }
   .topNav > ul > .searchIconBackground {
     display: inline-block;
-    width: 112px; }
+    width: 115px; }
   .searchField {
-    width: 53px; }
+    width: 50px; }
   .topNav > ul > .searchMobileIconBackground {
     display: none; }
   .topNav > ul > .navDesktopIcon {
