--- a/resources/assets/sass/app2.scss
+++ b/resources/assets/sass/app2.scss
@@ -207,16 +207,18 @@ article
   padding: 3px;
   height: auto;
 }
-.createTitleText
-{
-  width: 85%;
-}
+
 
 #createBodyText
 {
   @include baseTextField();
   font-size: 110%;
 }
+  #createBodyText:focus
+  {
+    outline: none !important;
+    box-shadow: 0 0 4px #27AE60;
+  }
 
 #centerFooter
 {
