--- a/resources/assets/sass/nav/forms.scss
+++ b/resources/assets/sass/nav/forms.scss
@@ -117,3 +117,13 @@
   border:1px solid #27AE60;
   box-shadow: 0 0 10px #27AE60;
 }
+
+#otherExtensions
+{
+  display: none;
+}
+
+.newExtension
+{
+  padding-top: 5px;
+}
