--- a/public/css/app.css
+++ b/public/css/app.css
@@ -408,6 +408,28 @@ p.test {
   font-style: normal;
   line-height: 1.58; }
 
+.postPhoto {
+  height: auto;
+  width: auto;
+  max-width: 450px;
+  max-height: 500px;
+  text-align: center;
+  margin: 0 auto; }
+
+.showExtensions {
+  padding: 15px 55px;
+  font-family: "Open Sans", Arial, serif;
+  border-radius: 7px;
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
+  background-color: #ECF0F1;
+  border: 1px solid #2C3E50;
+  font-weight: 500;
+  margin: 35px 0 0 0; }
+  .showExtensions:hover {
+    color: #FFFFFF;
+    background: #2ECC71; }
+
 .beliefNav {
   width: auto;
   margin: 0 auto;
@@ -1018,6 +1040,12 @@ a.excerptText {
   border: 1px solid #27AE60;
   box-shadow: 0 0 10px #27AE60; }
 
+#otherExtensions {
+  display: none; }
+
+.newExtension {
+  padding-top: 5px; }
+
 #welcome {
   width: 35%;
   min-width: 250px;
@@ -1344,14 +1372,6 @@ article {
 .photoContent {
   margin: 0 auto;
   text-align: center; }
-
-.postPhoto {
-  height: auto;
-  width: auto;
-  max-width: 400px;
-  max-height: 450px;
-  text-align: center;
-  margin: 0 auto; }
 
 /* Button specific */
 .navButton {
