--- a/resources/assets/sass/nav/contentNav.scss
+++ b/resources/assets/sass/nav/contentNav.scss
@@ -86,22 +86,25 @@ p.test
 
 .showExtensions
 {
-  padding:15px 55px;
-  font-family: "Open Sans", Arial, serif;
+  padding:5px 45px;
   border-radius:7px;
   -moz-border-radius:7px;
   -webkit-border-radius:7px;
   background-color: #ECF0F1;
   border: 1px solid #2C3E50;
-  font-weight: 500;
-  margin: 35px 0 0 0;
+  font-weight: 400;
+  margin: 15px 0 5px 0;
 
   &:hover
   {
     color: #FFFFFF;
     background: #2ECC71;
-
   }
+}
+
+.showAll
+{
+  margin: 10px 0 10px 0;
 }
 
 
