--- a/resources/assets/sass/nav/forms.scss
+++ b/resources/assets/sass/nav/forms.scss
@@ -122,8 +122,14 @@
 {
   display: none;
 }
+#otherExtensions:focus
+{
+  outline: none !important;
+  border:1px solid #27AE60;
+  box-shadow: 0 0 10px #27AE60;
+}
 
 .newExtension
 {
-  padding-top: 5px;
+  padding-top: 2px;
 }
