--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -19,12 +19,6 @@
     .innerProfileMenus {
       height: 210px;
     }
-    #leftSide {
-      height: auto;
-    }
-    #rightSide {
-      height: auto;
-    }
     #createOptions {
       max-height: 640px;
     }
@@ -89,12 +83,6 @@
       height: 210px;
     }
 
-    #leftSide {
-      height: auto;
-    }
-    #rightSide {
-      height: auto;
-    }
     .topNav > ul > li > p {
       padding: 0 18px;
     }
@@ -134,28 +122,6 @@
     {
       max-height: 625px;
     }
-    .innerProfileMenus
-    {
-      height: 175px;
-    }
-    #leftSide
-    {
-      top: 80%;
-      height: 20%;
-      width: 45%;
-      visibility: visible;
-      left: .01em;
-      font-size: 0%;
-
-    }
-    #rightSide {
-      top: 80%;
-      height: 20%;
-      width: 45%;
-      visibility: visible;
-      right: .01em;
-      font-size: 0%;
-    }
 
     .topNav > ul > li > a
     {
@@ -164,19 +130,12 @@
     .topNav > ul > li > p {
       padding: 0 18px;
     }
-    #questionContainer
-    {
-      margin: 0 auto;
-      width: 70%;
-    }
+
   }
 
   //Tablet Landscape
   @media screen and (min-width: 852px) and (max-width: 1500px)
   {
-    html {
-
-    }
 
     #centerContent {
       width: 75%;
@@ -188,11 +147,6 @@
     #createOptions
     {
       max-height: 520px;
-    }
-    #questionContainer
-    {
-      margin: 0 auto;
-      width: 70%;
     }
 
     .formDataContainer
@@ -207,29 +161,6 @@
       border-radius: 25px;
     }
 
-    #leftSide
-    {
-      top: 56.1px;
-      height: auto;
-      visibility: visible;
-      left: .7em;
-      width: 21%;
-      font-size: 100%;
-    }
-    #rightSide
-    {
-      top: 56.1px;
-      height: auto;
-      visibility: visible;
-      right: .7em;
-      width: 21%;
-      font-size: 100%;
-    }
-    .innerProfileMenus
-    {
-      height: 70px;
-      font-size: 60%;
-    }
     .innerPhotos
     {
       height: 155px;
@@ -246,8 +177,6 @@
 //Mobile Portrait
 @mixin mobile($mobileBackground) {
   @media screen and (max-width: 419px) and (min-height: 541px) {
-    html {
-    }
 
     .topNav > ul > li > a {
       padding: 0 1px;
@@ -309,25 +238,6 @@
       max-width: 70%;
     }
 
-    #leftSide {
-      top: 80%;
-      height: 18%;
-      width: 45%;
-      visibility: visible;
-      left: .01em;
-      font-size: 0%;
-      padding-top: 3px;
-    }
-    #rightSide {
-      top: 80%;
-      height: 18%;
-      width: 45%;
-      visibility: visible;
-      right: .01em;
-      font-size: 0%;
-      padding-top: 3px;
-    }
-
     .infoNav > ul > li {
       width: 100%;
     }
@@ -367,10 +277,16 @@
 
     //Tooltip reposition
     .extensionSection .tooltiptext {
-      margin-left: -180px;
+      display: none;
+    }
+    .extensionIcon:hover .tooltiptext {
+      display:none;
     }
     .elevationSection .tooltiptext {
-      margin-left: -40px;
+      display: none;
+    }
+    .elevationIcon:hover .tooltiptext {
+      display: none;
     }
     .beliefIndex .tooltiptext
     {
@@ -415,6 +331,20 @@
       width: 65px;
     }
 
+    //Tooltip reposition
+    .extensionSection .tooltiptext {
+      display: none;
+    }
+    .extensionIcon:hover .tooltiptext {
+      display:none;
+    }
+    .elevationSection .tooltiptext {
+      display: none;
+    }
+    .elevationIcon:hover .tooltiptext {
+      display: none;
+    }
+
     .formDataContainer
     {
       width: 98%;
@@ -443,25 +373,6 @@
       max-height: 300px;
     }
 
-    #leftSide {
-      top: 18%;
-      height: auto;
-      width: 20%;
-      visibility: visible;
-      left: .1em;
-    }
-
-    #rightSide {
-      top: 18%;
-      height: auto;
-      width: 20%;
-      visibility: visible;
-      right: .1em;
-    }
-
-    .innerProfileMenus {
-      height: 70px;
-    }
     .innerPhotos {
       height: 120px;
     }
@@ -484,11 +395,6 @@
     .profileNav > ul > li:hover > div
     {
       visibility: hidden;
-    }
-    #questionContainer
-    {
-      margin: 0 auto;
-      width: 80%;
     }
   }
 
@@ -560,9 +466,6 @@
       width: 100%;
     }
 
-    .innerProfileMenus {
-      height: 70px;
-    }
     .innerPhotos {
       padding-top: 5px;
       height: 80px;
@@ -591,11 +494,18 @@
     }
 
     //Tooltip reposition
+    //Tooltip reposition
     .extensionSection .tooltiptext {
-      margin-left: -180px;
+      display: none;
+    }
+    .extensionIcon:hover .tooltiptext {
+      display:none;
     }
     .elevationSection .tooltiptext {
-      margin-left: -40px;
+      display: none;
+    }
+    .elevationIcon:hover .tooltiptext {
+      display: none;
     }
     .beliefIndex .tooltiptext
     {
@@ -615,6 +525,21 @@
   {
     html {
     }
+
+    //Tooltip reposition
+    .extensionSection .tooltiptext {
+      display: none;
+    }
+    .extensionIcon:hover .tooltiptext {
+      display:none;
+    }
+    .elevationSection .tooltiptext {
+      display: none;
+    }
+    .elevationIcon:hover .tooltiptext {
+      display: none;
+    }
+    
     .topNav > ul > li > div {
       width: 92px;
     }
@@ -660,29 +585,6 @@
       padding-right: 1px;
     }
 
-
-    #leftSide {
-      top: 1%;
-      height: auto;
-      width: 20%;
-      visibility: visible;
-      left: .1em;
-    }
-    #leftSide h2
-    {
-      display: none;
-    }
-    #rightSide {
-      top: 1%;
-      height: auto;
-      width: 20%;
-      visibility: visible;
-      right: .1em;
-    }
-    #rightSide h2
-    {
-      display: none;
-    }
     .innerProfileMenus {
       height: 70px;
     }
@@ -709,12 +611,6 @@
     .profileNav > ul > li:hover > div
     {
       visibility: hidden;
-    }
-
-    #questionContainer
-    {
-      margin: 0 auto;
-      width: 80%;
     }
   }
 
