New User Guide, extension updates

--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -439,6 +439,41 @@ p.test {
   text-align: left;
   width: 100%; }
 
+progress[value] {
+  /* Reset the default appearance */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  /* Get rid of default border in Firefox. */
+  border: none;
+  /* Dimensions */
+  width: 250px;
+  height: 20px;
+  /* For IE10 */
+  color: #27AE60; }
+
+progress[value]::-webkit-progress-bar {
+  background-color: #ECF0F1;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset; }
+
+progress[value]::-webkit-progress-value {
+  background-color: #27AE60;
+  border-radius: 5px; }
+
+.progress-bar {
+  background-color: #FFFFFF;
+  border-radius: 5px;
+  border: 2px solid #2C3E50;
+  position: relative;
+  display: block; }
+
+.progress-bar > span {
+  background-color: #27AE60;
+  border-radius: 2px;
+  display: block;
+  text-indent: -9999px; }
+
 .beliefNav {
   width: auto;
   margin: 0 auto;
@@ -756,7 +791,11 @@ p.test {
   display: inline-block;
   padding-bottom: 3px; }
 
-.extensionSection .tooltiptext {
+.extensionIcon {
+  display: inline-block;
+  color: #27AE60; }
+
+.extensionIcon .tooltiptext {
   visibility: hidden;
   width: 200px;
   background-color: #2C3E50;
@@ -770,8 +809,11 @@ p.test {
   left: 50%;
   margin-left: -100px; }
 
-.extensionSection:hover .tooltiptext {
+.extensionIcon:hover .tooltiptext {
   visibility: visible; }
+
+.extensionCounter {
+  display: inline-block; }
 
 .cardImg {
   width: 48%;
@@ -875,13 +917,15 @@ a.navLink {
 
 .elevationSection a.iconLink {
   color: #27AE60;
-  display: inline-block; }
+  display: inline-block;
+  padding-right: 4px; }
   .elevationSection a.iconLink:hover {
     color: #2ECC71; }
 
 .extensionSection a.iconLink {
   color: #27AE60;
-  display: inline-block; }
+  display: inline-block;
+  padding-right: 4px; }
   .extensionSection a.iconLink:hover {
     color: #2ECC71; }
 
