--- a/resources/assets/sass/nav/links.scss
+++ b/resources/assets/sass/nav/links.scss
@@ -71,6 +71,7 @@ a.navLink
   color: #27AE60;
   //border: 1px solid #27AE60;
   display: inline-block;
+  padding-right: 4px;
 
   &:hover
   {
@@ -84,6 +85,7 @@ a.navLink
   color: #27AE60;
   //border: 1px solid #27AE60;
   display: inline-block;
+  padding-right: 4px;
 
   &:hover
   {
