--- a/resources/assets/sass/nav/links.scss
+++ b/resources/assets/sass/nav/links.scss
@@ -66,7 +66,7 @@ a.navLink
   }
 }
 
-.elevationSection a.iconLink
+.leftSection a.iconLink
 {
   color: #27AE60;
   //border: 1px solid #27AE60;
@@ -80,7 +80,7 @@ a.navLink
   }
 }
 
-.extensionSection a.iconLink
+.rightSection a.iconLink
 {
   color: #27AE60;
   //border: 1px solid #27AE60;
@@ -93,7 +93,7 @@ a.navLink
 
   }
 }
-.beaconSection a.iconLink
+.centerSection a.iconLink
 {
   color: #27AE60;
   //border: 1px solid #27AE60;
