--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -276,16 +276,16 @@
     }
 
     //Tooltip reposition
-    .extensionSection .tooltiptext {
+    .leftSection .tooltiptext {
       display: none;
     }
-    .extensionIcon:hover .tooltiptext {
+    .leftIcon:hover .tooltiptext {
       display:none;
     }
-    .elevationSection .tooltiptext {
+    .rightSection .tooltiptext {
       display: none;
     }
-    .elevationIcon:hover .tooltiptext {
+    .rightIcon:hover .tooltiptext {
       display: none;
     }
     .beliefIndex .tooltiptext
@@ -332,16 +332,16 @@
     }
 
     //Tooltip reposition
-    .extensionSection .tooltiptext {
+    .leftSection .tooltiptext {
       display: none;
     }
-    .extensionIcon:hover .tooltiptext {
+    .leftIcon:hover .tooltiptext {
       display:none;
     }
-    .elevationSection .tooltiptext {
+    .rightSection .tooltiptext {
       display: none;
     }
-    .elevationIcon:hover .tooltiptext {
+    .rightIcon:hover .tooltiptext {
       display: none;
     }
 
@@ -494,17 +494,16 @@
     }
 
     //Tooltip reposition
-    //Tooltip reposition
-    .extensionSection .tooltiptext {
+    .leftSection .tooltiptext {
       display: none;
     }
-    .extensionIcon:hover .tooltiptext {
+    .leftIcon:hover .tooltiptext {
       display:none;
     }
-    .elevationSection .tooltiptext {
+    .rightSection .tooltiptext {
       display: none;
     }
-    .elevationIcon:hover .tooltiptext {
+    .rightIcon:hover .tooltiptext {
       display: none;
     }
     .beliefIndex .tooltiptext
@@ -527,16 +526,16 @@
     }
 
     //Tooltip reposition
-    .extensionSection .tooltiptext {
+    .leftSection .tooltiptext {
       display: none;
     }
-    .extensionIcon:hover .tooltiptext {
+    .leftIcon:hover .tooltiptext {
       display:none;
     }
-    .elevationSection .tooltiptext {
+    .rightSection .tooltiptext {
       display: none;
     }
-    .elevationIcon:hover .tooltiptext {
+    .rightIcon:hover .tooltiptext {
       display: none;
     }
     
