--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -326,9 +326,14 @@
       width: 85%;
     }
 
+    .topNav > ul > .searchIconBackground
+    {
+      display: inline-block;
+      width: 120px;
+    }
     .searchField
     {
-      width: 65px;
+      width: 45px;
     }
 
     //Tooltip reposition
@@ -401,8 +406,6 @@
   //Small screen mobile portrait
   @media screen and (max-width: 465px) and (max-height: 540px) {
 
-    html {
-    }
 
     .topNav > ul > li > a {
       padding: 0 0;
@@ -555,11 +558,11 @@
     .topNav > ul > .searchIconBackground
     {
       display: inline-block;
-      width: 105px;
+      width: 120px;
     }
     .searchField
     {
-      width: 35px;
+      width: 55px;
     }
     .topNav > ul > .searchMobileIconBackground
     {
