Updated Beacon Mod adding and removing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -404,7 +404,17 @@
 
 p.textContent {
   line-height: 1.5;
-  padding: 0 3px 5px 3px; }
+  padding: 0 3px 5px 3px;
+  white-space: pre-wrap;
+  /* css-3 */
+  white-space: -moz-pre-wrap;
+  /* Mozilla, since 1999 */
+  white-space: -pre-wrap;
+  /* Opera 4-6 */
+  white-space: -o-pre-wrap;
+  /* Opera 7 */
+  word-wrap: break-word;
+  /* Internet Explorer 5.5+ */ }
 
 .postPhoto {
   height: auto;
