--- a/resources/assets/sass/utility/flatThemeVars.scss
+++ b/resources/assets/sass/utility/flatThemeVars.scss
@@ -21,6 +21,14 @@ $actHoverColor2:  #27AE60;
 $actTextColor:    #000000;
 $actTextHoverColor: #FFFFFF;
 
+//Action Button Variables:
+$redButtonColor2: #F44336;
+$redButtonColor1: #F44336;
+$redHoverColor1:  #B71C1C;
+$redHoverColor2:  #B71C1C;
+$redTextColor:    #FFFFFF;
+$redTextHoverColor: #FFFFFF;
+
 //Content
 $centerBackgroundColor: #E8E8E8;
 $centerOpacity: 0.97;
