--- a/resources/assets/sass/utility/starThemeVars.scss
+++ b/resources/assets/sass/utility/starThemeVars.scss
@@ -21,6 +21,15 @@ $actHoverColor2:  #27AE60;
 $actTextColor:    #000000;
 $actTextHoverColor: #FFFFFF;
 
+//Action Button Variables:
+$redButtonColor2: #F44336;
+$redButtonColor1: #F44336;
+$redHoverColor1:  #B71C1C;
+$redHoverColor2:  #B71C1C;
+$redTextColor:    #000000;
+$redTextHoverColor: #FFFFFF;
+
+
 //Content
 $centerBackgroundColor: #ECF0F1;
 $centerOpacity: 0.97;
