--- a/resources/assets/sass/utility/starThemeVars.scss
+++ b/resources/assets/sass/utility/starThemeVars.scss
@@ -26,7 +26,7 @@ $redButtonColor2: #F44336;
 $redButtonColor1: #F44336;
 $redHoverColor1:  #B71C1C;
 $redHoverColor2:  #B71C1C;
-$redTextColor:    #000000;
+$redTextColor:    #FFFFFF;
 $redTextHoverColor: #FFFFFF;
 
 
