--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -1407,7 +1407,7 @@ article {
   color: #FFFFFF;
   outline: none;
   background-color: #27AE60;
-  border: 1px solid #202020; }
+  border: 1px solid #2C3E50; }
 
 #centerTextContent > button:hover > div {
   display: inline-block; }
@@ -1486,10 +1486,11 @@ article {
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
   font-weight: 500;
+  border: 1px solid #2C3E50;
   color: #FFFFFF;
   outline: none;
   background-color: #27AE60;
-  border: 1px solid #202020; }
+  border: 1px solid #2C3E50; }
   .navButton:hover {
     color: #FFFFFF;
     background: -webkit-linear-gradient(#2ECC71, #2ECC71);
@@ -1505,7 +1506,7 @@ article {
   font-weight: 500;
   color: #000000;
   outline: none;
-  background-color: Transparent;
+  background-color: #ECF0F1;
   border: none;
   cursor: pointer;
   overflow: hidden; }
@@ -1524,7 +1525,7 @@ article {
   font-weight: 500;
   color: #000000;
   outline: none;
-  background-color: Transparent;
+  background-color: #ECF0F1;
   border: none;
   cursor: pointer;
   overflow: hidden;
@@ -1544,11 +1545,11 @@ article {
   font-weight: 500;
   color: #000000;
   outline: none;
-  background-color: Transparent;
+  background-color: #ECF0F1;
   border: none;
   cursor: pointer;
   overflow: hidden;
-  border: solid 1px; }
+  border: 1px solid #2C3E50; }
   .indexButton:hover {
     color: #FFFFFF;
     background: -webkit-linear-gradient(#27AE60, #27AE60);
@@ -1562,11 +1563,10 @@ article {
   -moz-border-radius: 7px;
   -webkit-border-radius: 7px;
   font-weight: 500;
-  color: #000000;
+  color: #FFFFFF;
   outline: none;
   background-color: #F44336;
-  border: 1px solid #202020;
-  border: solid 1px; }
+  border: 1px solid #2C3E50; }
   .redButton:hover {
     color: #FFFFFF;
     background: -webkit-linear-gradient(#B71C1C, #B71C1C);
