--- a/resources/assets/sass/app2.scss
+++ b/resources/assets/sass/app2.scss
@@ -263,6 +263,7 @@ article
 .navButton
 {
   @include baseButton;
+  border: 1px solid #2C3E50;
   @include colorNavButton($navButtonColor1, $navButtonColor2, $navTextColor);
   &:hover
   {
@@ -313,7 +314,7 @@ article
     background: -moz-linear-gradient($actHoverColor1, $actHoverColor2);
     background: linear-gradient($actHoverColor1, $actHoverColor2);
   }
-  border: solid 1px ;
+  border: 1px solid #2C3E50;
 }
 
   .redButton
@@ -328,7 +329,7 @@ article
       background: -moz-linear-gradient($redHoverColor1, $redHoverColor2);
       background: linear-gradient($redHoverColor1, $redHoverColor2);
     }
-    border: solid 1px;
+    border: 1px solid #2C3E50;
   }
 
 
