--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -432,13 +432,14 @@
     }
     .topNav > ul > .searchMobileIconBackground {
       display: inline-block;
-      padding-left: 10px;
+      padding-left: 12px;
     }
     .topNav > ul > .navDesktopIcon {
       display: none;
     }
     .topNav > ul > .navMobileIcon {
       display: inline-block;
+      padding: 0 3px 0 3px;
     }
     .createTitleText {
       max-width: 70%;
