--- a/resources/assets/sass/nav/contentNav.scss
+++ b/resources/assets/sass/nav/contentNav.scss
@@ -69,6 +69,12 @@ p.textContent
 {
   line-height: 1.5;
   padding: 0 3px 5px 3px;
+}
+
+p.beliefContent
+{
+  line-height: 1.5;
+  padding: 0 3px 5px 3px;
   white-space: pre-wrap; /* css-3 */
   white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
   white-space: -pre-wrap; /* Opera 4-6 */
