--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1158,6 +1158,16 @@ a.excerptText {
   width: auto;
   min-width: 250px; }
 
+h1.welcome {
+  font-weight: bold;
+  text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px  1px 0 #fff, 1px  1px 0 #fff;
+  color: #2ECC71;
+  font-size: 5em;
+  margin: 0 0 0 0; }
+
+h2.welcome {
+  margin: 0 0 20px 0; }
+
 h3 {
   color: #2C3E50; }
 
@@ -1251,14 +1261,18 @@ p.verification {
     width: 95%;
     min-width: 250px; }
   .authCard {
-    width: 98%; } }
+    width: 98%; }
+  h1.welcome {
+    font-size: 3.5em; } }
 
 @media screen and (min-width: 419px) and (max-width: 751px) and (max-height: 450px) {
   #welcome {
     width: 85%;
     min-width: 250px; }
   .authCard {
-    width: 89%; } }
+    width: 89%; }
+  h1.welcome {
+    font-size: 3.5em; } }
 
 @media screen and (max-width: 465px) and (max-height: 540px) {
   #welcome {
@@ -1267,14 +1281,18 @@ p.verification {
   .authCard {
     width: 98%; }
   .formLabel {
-    width: 33%; } }
+    width: 33%; }
+  h1.welcome {
+    font-size: 3.5em; } }
 
 @media screen and (min-width: 467px) and (max-width: 751px) and (max-height: 400px) {
   #welcome {
     width: 85%;
     min-width: 250px; }
   .authCard {
-    width: 95%; } }
+    width: 95%; }
+  h1.welcome {
+    font-size: 4em; } }
 
 html {
   background-color: #ECF0F1; }
