Updated social button for FB only

--- a/resources/assets/sass/nav/containers.scss
+++ b/resources/assets/sass/nav/containers.scss
@@ -58,3 +58,12 @@
   margin: 0 auto;
   width: 50%;
 }
+
+.socialContainer
+{
+  width: 75px;
+  height: 25px;
+  margin: 0 auto;
+  padding-left: 3px;
+  display: inline-block;
+}
