--- a/public/css/app.css
+++ b/public/css/app.css
@@ -940,6 +940,13 @@ hr.contentSeparator {
   margin: 0 auto;
   width: 50%; }
 
+.socialContainer {
+  width: 75px;
+  height: 25px;
+  margin: 0 auto;
+  padding-left: 3px;
+  display: inline-block; }
+
 .linkContainer {
   padding: 10px; }
 
@@ -1231,6 +1238,56 @@ p.verification {
   z-index: 1;
   height: 53px;
   background-color: #27AE60; }
+
+/*
+Login Specific
+*/
+div.social {
+  color: gray;
+  font-size: 1.1em;
+  text-align: center; }
+
+.btn-facebook {
+  background: #3a589a;
+  padding: 8px 25px;
+  text-decoration: none;
+  font-family: "Open Sans", Arial, serif;
+  border-radius: 7px;
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
+  font-weight: 500;
+  color: #FFFFFF;
+  border-color: #FFFFFF; }
+  .btn-facebook:hover {
+    background: rgba(58, 88, 154, 0.8); }
+
+.btn-twitter {
+  background: #4099ff;
+  padding: 8px 25px;
+  text-decoration: none;
+  font-family: "Open Sans", Arial, serif;
+  border-radius: 7px;
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
+  font-weight: 500;
+  color: #FFFFFF;
+  border-color: #FFFFFF; }
+  .btn-twitter:hover {
+    background: rgba(64, 153, 255, 0.8); }
+
+.btn-google-plus {
+  background: #e9544f;
+  padding: 8px 25px;
+  text-decoration: none;
+  font-family: "Open Sans", Arial, serif;
+  border-radius: 7px;
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
+  font-weight: 500;
+  color: #FFFFFF;
+  border-color: #FFFFFF; }
+  .btn-google-plus:hover {
+    background: rgba(233, 84, 79, 0.8); }
 
 @media screen and (min-width: 1501px) and (min-height: 850px) {
   #welcome {
