--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -129,6 +129,66 @@ p.verification
   background-color: #27AE60;
 }
 
+/*
+Login Specific
+*/
+div.social {
+  color: gray;
+  font-size: 1.1em;
+  text-align: center;
+}
+
+.btn-facebook {
+  background: #3a589a;
+  padding:8px 25px;
+  text-decoration: none;
+  font-family: "Open Sans", Arial, serif;
+  border-radius:7px;
+  -moz-border-radius:7px;
+  -webkit-border-radius:7px;
+  font-weight: 500;
+  color: #FFFFFF;
+  border-color: #FFFFFF;
+
+  &:hover {
+    background: rgba(#3a589a, 0.8);
+  }
+}
+
+.btn-twitter {
+  background: #4099ff;
+  padding:8px 25px;
+  text-decoration: none;
+  font-family: "Open Sans", Arial, serif;
+  border-radius:7px;
+  -moz-border-radius:7px;
+  -webkit-border-radius:7px;
+  font-weight: 500;
+  color: #FFFFFF;
+  border-color: #FFFFFF;
+
+  &:hover {
+    background: rgba(#4099ff, 0.8);
+  }
+}
+
+.btn-google-plus {
+  background: #e9544f;
+  padding:8px 25px;
+  text-decoration: none;
+  font-family: "Open Sans", Arial, serif;
+  border-radius:7px;
+  -moz-border-radius:7px;
+  -webkit-border-radius:7px;
+  font-weight: 500;
+  color: #FFFFFF;
+  border-color: #FFFFFF;
+
+  &:hover {
+    background: rgba(#e9544f, 0.8);
+  }
+}
+
 //Media Queries
 
 //Desktop
