FB login final touches for production

--- a/resources/assets/sass/pages/welcome.scss
+++ b/resources/assets/sass/pages/welcome.scss
@@ -151,7 +151,7 @@ Login Specific
   border-color: #FFFFFF;
 
   &:hover {
-    background: #FFFFFF;
+    background: #ECF0F1;
     color: #27AE60;
   }
 }
