--- a/resources/assets/sass/app2.scss
+++ b/resources/assets/sass/app2.scss
@@ -345,5 +345,5 @@ article
 
 //Include Media Queries
 @include desktop($imgBackground1);
-@include tablet($imgBackgroundLandscape);
-@include mobile($imgBackgroundPortrait);
+@include tablet($imgBackgroundPortrait, $imgBackgroundLandscape);
+@include mobile($imgBackgroundMobile, $imgBackgroundLandscape);
