--- a/resources/assets/sass/utility/flatThemeVars.scss
+++ b/resources/assets/sass/utility/flatThemeVars.scss
@@ -2,6 +2,7 @@
 $imgBackground1: "/img/background.jpg";
 $imgBackgroundLandscape: "/img/backgroundLandscape.jpg";
 $imgBackgroundPortrait: "/img/backgroundPortrait.jpg";
+$imgBackgroundMobile: "/img/backgroundMobile.jpg";
 //Background Colors:
 $mainBackgroundColor: #ECF0F1;
 
