--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -1142,27 +1142,6 @@ a.excerptText {
 .newExtension {
   padding-top: 2px; }
 
-@media screen and (min-width: 1301px) {
-  html {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/img/background.jpg"); } }
-
-@media screen and (min-width: 701px) and (max-width: 1300px) {
-  html {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/img/backgroundLandscape.jpg"); } }
-
-@media screen and (max-width: 701px) {
-  html {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/img/backgroundPortrait.jpg"); } }
-
 #welcome {
   width: 35%;
   min-width: 250px;
@@ -1645,6 +1624,11 @@ article {
     background: linear-gradient(#B71C1C, #B71C1C); }
 
 @media screen and (min-width: 1501px) and (min-height: 850px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/background.jpg"); }
   .topNav {
     width: 100%; }
   .interactButton {
@@ -1707,6 +1691,11 @@ article {
     padding: 12px 24px; } }
 
 @media screen and (max-width: 800px) and (min-height: 600px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/backgroundPortrait.jpg"); }
   #centerContent {
     width: 95%; }
   .topNav > ul > .searchIconBackground {
@@ -1723,6 +1712,11 @@ article {
     padding: 0 18px; } }
 
 @media screen and (min-width: 852px) and (max-width: 1500px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/backgroundLandscape.jpg"); }
   #centerContent {
     width: 75%; }
   .createTitleText {
@@ -1745,7 +1739,12 @@ article {
   .topNav > ul > li > p {
     padding: 0 24px; } }
 
-@media screen and (max-width: 419px) and (min-height: 541px) {
+@media screen and (max-width: 419px) and (min-height: 601px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/backgroundMobile.jpg"); }
   .topNav > ul > li > a {
     padding: 0 1px; }
   .topNav > ul > li > p {
@@ -1781,8 +1780,6 @@ article {
   #createBodyText {
     padding-left: 1px;
     padding-right: 1px; }
-  #createOptions {
-    max-height: 340px; }
   .createTitleText {
     max-width: 70%; }
   .infoNav > ul > li {
@@ -1795,8 +1792,6 @@ article {
   .listResourceLeft {
     padding-left: 1%;
     width: 45%; }
-  .interactButton {
-    padding: 3px 1px; }
   .profileNav > ul > li > div ul > li {
     display: block; }
   #questionContainer {
@@ -1822,6 +1817,11 @@ article {
     left: -60%; } }
 
 @media screen and (min-width: 419px) and (max-width: 751px) and (max-height: 450px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/backgroundLandscape.jpg"); }
   .topNav > ul > li > a {
     padding: 0 1px; }
   .topNav > ul > li > p {
@@ -1881,7 +1881,12 @@ article {
   .profileNav > ul > li:hover > div {
     visibility: hidden; } }
 
-@media screen and (max-width: 465px) and (max-height: 540px) {
+@media screen and (max-width: 465px) and (max-height: 600px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/backgroundMobile.jpg"); }
   .topNav > ul > li > a {
     padding: 0 0; }
   .topNav > ul > li > p {
@@ -1929,8 +1934,6 @@ article {
   .listResourceLeft {
     padding-left: 1%;
     width: 45%; }
-  .interactButton {
-    padding: 3px 1px; }
   .profileNav > ul > li > div ul > li {
     display: block; }
   #questionContainer {
