--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -2,6 +2,14 @@
 @mixin desktop($desktopBackground) {
   @media screen and (min-width: 1501px) and (min-height: 850px) {
 
+    html {
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      -webkit-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      background-image: url($desktopBackground);
+    }
     .topNav {
       width: 100%;
     }
@@ -99,11 +107,19 @@
 }
 
 //Tablet Portrait
-@mixin tablet($tabletBackground)
+@mixin tablet($imgBackgroundPortrait, $imgBackgroundLandscape)
 {
   @media screen and (max-width: 800px) and (min-height: 600px)
   {
 
+    html{
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      -webkit-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      background-image: url($imgBackgroundPortrait);
+    }
     #centerContent {
       width: 95%;
     }
@@ -137,6 +153,14 @@
   @media screen and (min-width: 852px) and (max-width: 1500px)
   {
 
+    html{
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      -webkit-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      background-image: url($imgBackgroundLandscape);
+    }
     #centerContent {
       width: 75%;
     }
@@ -175,9 +199,17 @@
   }
 }
 //Mobile Portrait
-@mixin mobile($mobileBackground) {
-  @media screen and (max-width: 419px) and (min-height: 541px) {
+@mixin mobile($imgBackgroundMobile, $imgBackgroundLandscape) {
+  @media screen and (max-width: 419px) and (min-height: 601px) {
 
+    html {
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      -webkit-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      background-image: url($imgBackgroundMobile);
+    }
     .topNav > ul > li > a {
       padding: 0 1px;
     }
@@ -233,9 +265,6 @@
       padding-left: 1px;
       padding-right: 1px;
     }
-    #createOptions {
-      max-height: 340px;
-    }
     .createTitleText
     {
       max-width: 70%;
@@ -255,10 +284,7 @@
       padding-left: 1%;
       width: 45%;
     }
-    .interactButton
-    {
-      padding: 3px 1px;
-    }
+
     .profileNav > ul > li > div ul > li
     {
       display: block;
@@ -305,6 +331,12 @@
   @media screen and (min-width: 419px) and (max-width: 751px) and (max-height: 450px)
   {
     html {
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      -webkit-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      background-image: url($imgBackgroundLandscape);
     }
 
     .topNav > ul > li > a {
@@ -405,9 +437,16 @@
   }
 
   //Small screen mobile portrait
-  @media screen and (max-width: 465px) and (max-height: 540px) {
+  @media screen and (max-width: 465px) and (max-height: 600px) {
 
-
+    html {
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      -webkit-background-size: cover;
+      -o-background-size: cover;
+      background-size: cover;
+      background-image: url($imgBackgroundMobile);
+    }
     .topNav > ul > li > a {
       padding: 0 0;
     }
@@ -478,9 +517,6 @@
     .listResourceLeft {
       padding-left: 1%;
       width: 45%;
-    }
-    .interactButton {
-      padding: 3px 1px;
     }
     .profileNav > ul > li > div ul > li {
       display: block;
