--- a/resources/assets/sass/app2.scss
+++ b/resources/assets/sass/app2.scss
@@ -344,6 +344,6 @@ article
 
 
 //Include Media Queries
-@include desktop($imgBackground1);
-@include tablet($imgBackgroundPortrait, $imgBackgroundLandscape);
-@include mobile($imgBackgroundMobile, $imgBackgroundLandscape);
+@include desktop();
+@include tablet();
+@include mobile();
