--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -1142,6 +1142,34 @@ a.excerptText {
 .newExtension {
   padding-top: 2px; }
 
+@media screen and (min-width: 1301px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/background.jpg"); } }
+
+@media screen and (min-width: 701px) and (max-width: 1300px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/backgroundLandscape.jpg"); } }
+
+@media screen and (max-width: 701px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/backgroundPortrait.jpg"); } }
+
+@media screen and (max-width: 701px) and (max-width: 700px) {
+  html {
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("/img/backgroundMobile.jpg"); } }
+
 #welcome {
   width: 35%;
   min-width: 250px;
@@ -1624,11 +1652,6 @@ article {
     background: linear-gradient(#B71C1C, #B71C1C); }
 
 @media screen and (min-width: 1501px) and (min-height: 850px) {
-  html {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/img/background.jpg"); }
   .topNav {
     width: 100%; }
   .interactButton {
@@ -1691,11 +1714,6 @@ article {
     padding: 12px 24px; } }
 
 @media screen and (max-width: 800px) and (min-height: 600px) {
-  html {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/img/backgroundPortrait.jpg"); }
   #centerContent {
     width: 95%; }
   .topNav > ul > .searchIconBackground {
@@ -1712,11 +1730,6 @@ article {
     padding: 0 18px; } }
 
 @media screen and (min-width: 852px) and (max-width: 1500px) {
-  html {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/img/backgroundLandscape.jpg"); }
   #centerContent {
     width: 75%; }
   .createTitleText {
@@ -1740,11 +1753,6 @@ article {
     padding: 0 24px; } }
 
 @media screen and (max-width: 419px) and (min-height: 601px) {
-  html {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/img/backgroundMobile.jpg"); }
   .topNav > ul > li > a {
     padding: 0 1px; }
   .topNav > ul > li > p {
@@ -1817,11 +1825,6 @@ article {
     left: -60%; } }
 
 @media screen and (min-width: 419px) and (max-width: 751px) and (max-height: 450px) {
-  html {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/img/backgroundLandscape.jpg"); }
   .topNav > ul > li > a {
     padding: 0 1px; }
   .topNav > ul > li > p {
@@ -1882,11 +1885,6 @@ article {
     visibility: hidden; } }
 
 @media screen and (max-width: 465px) and (max-height: 600px) {
-  html {
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url("/img/backgroundMobile.jpg"); }
   .topNav > ul > li > a {
     padding: 0 0; }
   .topNav > ul > li > p {
