--- a/resources/assets/sass/mixins/mediaQueries.scss
+++ b/resources/assets/sass/mixins/mediaQueries.scss
@@ -1,15 +1,7 @@
 //Desktop
-@mixin desktop($desktopBackground) {
+@mixin desktop() {
   @media screen and (min-width: 1501px) and (min-height: 850px) {
 
-    html {
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      -webkit-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      background-image: url($desktopBackground);
-    }
     .topNav {
       width: 100%;
     }
@@ -107,19 +99,11 @@
 }
 
 //Tablet Portrait
-@mixin tablet($imgBackgroundPortrait, $imgBackgroundLandscape)
+@mixin tablet()
 {
   @media screen and (max-width: 800px) and (min-height: 600px)
   {
 
-    html{
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      -webkit-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      background-image: url($imgBackgroundPortrait);
-    }
     #centerContent {
       width: 95%;
     }
@@ -153,14 +137,6 @@
   @media screen and (min-width: 852px) and (max-width: 1500px)
   {
 
-    html{
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      -webkit-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      background-image: url($imgBackgroundLandscape);
-    }
     #centerContent {
       width: 75%;
     }
@@ -199,17 +175,9 @@
   }
 }
 //Mobile Portrait
-@mixin mobile($imgBackgroundMobile, $imgBackgroundLandscape) {
+@mixin mobile() {
   @media screen and (max-width: 419px) and (min-height: 601px) {
 
-    html {
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      -webkit-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      background-image: url($imgBackgroundMobile);
-    }
     .topNav > ul > li > a {
       padding: 0 1px;
     }
@@ -330,14 +298,6 @@
   //Mobile landscape
   @media screen and (min-width: 419px) and (max-width: 751px) and (max-height: 450px)
   {
-    html {
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      -webkit-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      background-image: url($imgBackgroundLandscape);
-    }
 
     .topNav > ul > li > a {
       padding: 0 1px;
@@ -439,14 +399,7 @@
   //Small screen mobile portrait
   @media screen and (max-width: 465px) and (max-height: 600px) {
 
-    html {
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      -webkit-background-size: cover;
-      -o-background-size: cover;
-      background-size: cover;
-      background-image: url($imgBackgroundMobile);
-    }
+
     .topNav > ul > li > a {
       padding: 0 0;
     }
