--- a/resources/assets/sass/mixins/mediaQueryImg.scss
+++ b/resources/assets/sass/mixins/mediaQueryImg.scss
@@ -9,6 +9,7 @@
     background-image: url($imgBackground1);
   }
 }
+//Tablet / Small Laptop
 @media screen and (min-width: 701px) and (max-width: 1300px)
 {
   html{
@@ -20,6 +21,7 @@
     background-image: url($imgBackgroundLandscape);
   }
 }
+//Tablet
 @media screen and (max-width: 701px)
 {
   html{
@@ -30,7 +32,7 @@
     background-size: cover;
     background-image: url($imgBackgroundPortrait);
   }
-
+//Mobile Phone
 @media screen and (max-width: 700px)
 {
   html {
