Updated Social button, secondary post buttons

--- a/resources/assets/sass/nav/cardNav.scss
+++ b/resources/assets/sass/nav/cardNav.scss
@@ -183,7 +183,12 @@
 }
 p.moreOptions
 {
-  color: #2C3E50;
+  color: #A9A9A9;
+  margin: 0 auto;
+}
+p.moreOptions:hover
+{
+  color: #27AE60;
   margin: 0 auto;
 }
 
