--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -270,6 +270,7 @@ article
 {
   @include baseButton;
   @include colorActButton($actButtonColor1, $actButtonColor2, $actTextColor);
+  border: 1px solid #A9A9A9;
   &:hover
   {
     color: $actTextHoverColor;
